<resources>
    <string name="app_name">Bot in a Pot</string>
    <string name="bot_name">B.I.P.</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="my_plants">My Plants</string>
    <string name="log">Log</string>
    <string name="search">Search</string>
    <string name="next_scan">Next Scan</string>
    <string name="previous_scans">Previous Scans</string>
    <string name="add_plant">Add plant</string>
    <string name="edit_plant">Edit Plant</string>
    <string name="delete_plant">Delete Plant</string>
    <string name="scan_history">Scan History</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="update">Update</string>
    <string name="log_out">Log Out</string>
    <string name="type">Type</string>
    <string name="smartpot_number">SmartPot Number</string>
    <string name="parameters">Parameters</string>
    <string name="temperature">Temperature</string>
    <string name="temperature_unit">°C</string>
    <string name="water_every">Water every</string>
    <string name="water_unit">hours</string>
    <string name="light">Light</string>
    <string name="light_unit">lux</string>
    <string name="select_image">Select Image</string>
    <string name="last_scan">Last Scan</string>
    <string name="scan_results">Scan Results</string>
    <string name="last_action">Last Action</string>
    <string name="new_plant">New Plant</string>
    <string name="logo">Logo</string>
    <string name="profile_picture">Profile picture</string>
    <string name="scan_now">Scan Now</string>
    <string name="new_plant_warning">We don\'t have this plant in our database. Please insert the parameters yourself and we will add it to the database for future use.</string>
    <string name="smart_pot_does_not_exist">The pot number you inserted does not exist in our database. Please put another number.</string>
    <string name="pot_settings">Pot Settings</string>
    <string name="reminders">Reminders</string>
    <string name="next_water">Next Water</string>
</resources>