<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/new_plant_constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.NewPlant" >

    <Button
        android:id="@+id/new_plant_add"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/background_button_green"
        android:text="@string/add_plant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toTopOf="@+id/new_plant_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="16dp">

            <EditText
                android:id="@+id/new_plant_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/background_text"
                android:ems="10"
                android:hint="@string/name"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="#000000"
                android:textColorHint="#444647" />

            <AutoCompleteTextView
                android:id="@+id/new_plant_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/background_text"
                android:completionThreshold="1"
                android:hint="@string/type"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:nextFocusDown="@id/new_plant_smartpot"
                android:nextFocusForward="@id/new_plant_smartpot"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:singleLine="true"
                android:textColor="#000000"
                android:textColorHint="#444647" />

            <TextView
                android:id="@+id/new_plant_type_warning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/new_plant_warning"
                android:textColor="#EEEEEE"
                android:textSize="12sp"
                android:visibility="gone" />

            <EditText
                android:id="@+id/new_plant_smartpot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/background_text"
                android:ems="10"
                android:hint="@string/smartpot_number"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="9"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="#000000"
                android:textColorHint="#444647" />

            <TextView
                android:id="@+id/new_plant_pot_number_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/smart_pot_does_not_exist"
                android:textColor="#FF6E40"
                android:visibility="gone" />

            <TextView
                android:id="@+id/new_plant_parameters"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/parameters"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/new_plant_temperature"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:background="@drawable/background_text"
                    android:ems="10"
                    android:enabled="false"
                    android:hint="@string/temperature"
                    android:importantForAutofill="no"
                    android:inputType="number|numberDecimal"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:textColor="#000000"
                    android:textColorHint="#444647" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp"
                    android:layout_weight="5"
                    android:gravity="center_vertical|end"
                    android:text="@string/temperature_unit"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/new_plant_humidity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:background="@drawable/background_text"
                    android:ems="10"
                    android:enabled="false"
                    android:hint="@string/humidity"
                    android:importantForAutofill="no"
                    android:inputType="number|numberDecimal"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:textColor="#000000"
                    android:textColorHint="#444647" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp"
                    android:layout_weight="5"
                    android:gravity="center_vertical|end"
                    android:text="@string/humidity_unit"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/new_plant_light"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:background="@drawable/background_text"
                    android:ems="10"
                    android:enabled="false"
                    android:hint="@string/light"
                    android:importantForAutofill="no"
                    android:inputType="number|numberDecimal"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:textColor="#000000"
                    android:textColorHint="#444647" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp"
                    android:layout_weight="5"
                    android:gravity="center_vertical|end"
                    android:text="@string/light_unit"
                    android:textSize="20sp" />

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginTop="32dp"
                app:cardCornerRadius="100dp">

                <ImageView
                    android:id="@+id/new_plant_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/select_image"
                    app:srcCompat="@drawable/ic_camera" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/new_plant_progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

</androidx.constraintlayout.widget.ConstraintLayout>