<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/plant_detail_motion_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/fragment_plant_detail_scene"
    tools:context=".fragments.PlantDetail">

    <androidx.cardview.widget.CardView
        android:id="@+id/plant_detail_image_holder"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:cardCornerRadius="100dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" >

        <ImageView
            android:id="@+id/plant_detail_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:src="@tools:sample/avatars" />
    </androidx.cardview.widget.CardView>

    <ScrollView
        android:id="@+id/plant_detail_scroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toTopOf="@+id/plant_detail_button_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plant_detail_image_holder"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:paddingTop="8dp"
                android:paddingBottom="8dp">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/type"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/plant_detail_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/type"
                    android:textAlignment="textEnd"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingTop="8dp"
                android:paddingBottom="8dp">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/smartpot_number"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/plant_detail_pot_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/smartpot_number"
                    android:textAlignment="textEnd"
                    android:textSize="16sp" />

            </LinearLayout>

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="8dp"
                android:paddingBottom="8dp">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/last_scan"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/plant_detail_last_scan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/last_scan"
                    android:textAlignment="textEnd"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/scan_results"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/plant_detail_emoji"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textEnd"
                    android:textSize="24sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/plant_detail_scan_results"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:text="@string/scan_results"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/last_action"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/plant_detail_scan_action"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:text="@string/last_action"
                android:textSize="16sp" />

            <View
                android:id="@+id/divider4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="8dp"
                android:paddingBottom="8dp">

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/next_scan"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/plant_detail_next_scan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/next_scan"
                    android:textAlignment="textEnd"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/plant_detail_expand"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/background_button_round_green"
        android:foreground="@drawable/ic_expand"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/plant_detail_button_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="1dp"
        app:layout_constraintBottom_toTopOf="@+id/plant_detail_expand"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plant_detail_scroll">

        <TextView
            android:id="@+id/plant_detail_scans_text4"
            android:layout_width="92dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:labelFor="@id/plant_detail_scan_now"
            android:text="@string/scan_now"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/plant_detail_scan_now"
            app:layout_constraintStart_toStartOf="@+id/plant_detail_scan_now"
            app:layout_constraintTop_toBottomOf="@+id/plant_detail_scan_now" />

        <Button
            android:id="@+id/plant_detail_delete"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/background_button_round_red"
            android:foreground="@drawable/ic_delete"
            android:foregroundGravity="fill"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.75"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.75"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/plant_detail_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:labelFor="@id/plant_detail_edit"
            android:text="@string/edit_plant"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/plant_detail_edit"
            app:layout_constraintStart_toStartOf="@+id/plant_detail_edit"
            app:layout_constraintTop_toBottomOf="@+id/plant_detail_scans" />

        <Button
            android:id="@+id/plant_detail_scans"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/background_button_round_green"
            android:foreground="@drawable/ic_graph"
            android:foregroundGravity="fill"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.75"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.25"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/plant_detail_edit"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/background_button_round_green"
            android:foreground="@drawable/ic_edit"
            android:foregroundGravity="fill"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.25"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/plant_detail_scan_now"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/background_button_round_green"
            android:foreground="@drawable/ic_scan_now"
            android:foregroundGravity="fill"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.75"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/plant_detail_scans_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:labelFor="@id/plant_detail_scans"
            android:text="@string/scan_history"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/plant_detail_scans"
            app:layout_constraintStart_toStartOf="@+id/plant_detail_scans"
            app:layout_constraintTop_toBottomOf="@+id/plant_detail_scans" />

        <TextView
            android:id="@+id/plant_detail_scans_delete"
            android:layout_width="92dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:labelFor="@id/plant_detail_delete"
            android:text="@string/delete_plant"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/plant_detail_delete"
            app:layout_constraintStart_toStartOf="@+id/plant_detail_delete"
            app:layout_constraintTop_toBottomOf="@+id/plant_detail_delete" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.motion.widget.MotionLayout>